# Mnemosyne

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: README.md  config.rs  deps.rs  fs_walk.rs  git.rs  main.rs  output.rs  skip.rs
src/data/: INSTRUCTIONS.txt  schema.json
