[package]
name = "mnemosyne"
version = "1.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
globset = "0.4.16"
hex = "0.4.3"
ignore = "0.4.23"
indicatif = "0.18.0"
infer = "0.19.0"
json5 = "0.4.1"
once_cell = "1.21.3"
os_info = "3.12.0"
owo-colors = "4.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
